--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,18 @@
-appdirs==1.4.0
-click==6.7
 Flask==0.12
-itsdangerous==0.24
 Jinja2==2.9.5
 MarkupSafe==0.23
+Pillow==4.1.0
+Werkzeug==0.11.15
+appdirs==1.4.0
+argparse==1.2.1
+click==6.7
+h5py==2.7.0
+hickle==2.1.0
+itsdangerous==0.24
+numpy==1.12.1
+olefile==0.44
 packaging==16.8
 pyparsing==2.1.10
+scipy==0.19.0
 six==1.10.0
-Werkzeug==0.11.15
+wsgiref==0.1.2
