save before converting to d3 brush

--- a/idbsapp.ini
+++ b/idbsapp.ini
@@ -3,6 +3,7 @@ base = /data/UCF/demo/IDBS_App/
 socket    = /data/UCF/demo/IDBS_App/socket.sock
 plugin    = python
 wsgi-file = /data/UCF/demo/IDBS_App/server.py
+logto = /data/UCF/demo/IDBS_App/%n.log
 callable = app
 pythonpath = %(base)
 buffer-size = 65535
